Evaluating the model performance after Standardization

--- a/drilling.ipynb
+++ b/drilling.ipynb
@@ -4,40 +4,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 25540,
-     "status": "ok",
-     "timestamp": 1731522401436,
-     "user": {
-      "displayName": "Naeimeh Nour",
-      "userId": "06407853353421918609"
-     },
-     "user_tz": 0
-    },
-    "id": "lg-UnAkPz2hL",
-    "outputId": "e3b83435-bce2-4b4f-ad17-cb9362be5939"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mounted at /content/drive\n"
-     ]
-    }
-   ],
-   "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "executionInfo": {
      "elapsed": 549,
      "status": "ok",
@@ -50,18 +16,7 @@
     },
     "id": "slUCyZAYyK4v"
    },
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mUnable to start Kernel 'Python 3.11.0' due to a timeout waiting for the ports to get used. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from re import L\n",
     "import pandas as pd\n",
@@ -75,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -96,14 +51,210 @@
    },
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mUnable to start Kernel 'Python 3.11.0' due to a timeout waiting for the ports to get used. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MD</th>\n",
+       "      <th>ROP</th>\n",
+       "      <th>ROP.1</th>\n",
+       "      <th>WOB</th>\n",
+       "      <th>WOB.1</th>\n",
+       "      <th>BIT_RPM</th>\n",
+       "      <th>TRQ</th>\n",
+       "      <th>SPP</th>\n",
+       "      <th>Flow In</th>\n",
+       "      <th>SPM</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Actpitv</th>\n",
+       "      <th>HOOKLOAD</th>\n",
+       "      <th>CSIP</th>\n",
+       "      <th>P ovb For Soft formation</th>\n",
+       "      <th>P ovb For Hard formation</th>\n",
+       "      <th>P ovb</th>\n",
+       "      <th>d</th>\n",
+       "      <th>D adjust</th>\n",
+       "      <th>PP Zamora Method</th>\n",
+       "      <th>PP Eaton Method</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>m</td>\n",
+       "      <td>min/m</td>\n",
+       "      <td>m/min</td>\n",
+       "      <td>klb</td>\n",
+       "      <td>Kgr</td>\n",
+       "      <td>rpm</td>\n",
+       "      <td>klb.ft</td>\n",
+       "      <td>Psi</td>\n",
+       "      <td>gal/min</td>\n",
+       "      <td>rev</td>\n",
+       "      <td>...</td>\n",
+       "      <td>bbl</td>\n",
+       "      <td>klb</td>\n",
+       "      <td>psi</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>psi</td>\n",
+       "      <td>No UNIT</td>\n",
+       "      <td>No unit</td>\n",
+       "      <td>PSI</td>\n",
+       "      <td>psi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15</td>\n",
+       "      <td>19.586777</td>\n",
+       "      <td>0.051055</td>\n",
+       "      <td>5.148</td>\n",
+       "      <td>2.337192</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.206517</td>\n",
+       "      <td>50</td>\n",
+       "      <td>525</td>\n",
+       "      <td>70</td>\n",
+       "      <td>...</td>\n",
+       "      <td>454.6412</td>\n",
+       "      <td>71.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.956864</td>\n",
+       "      <td>0.990307</td>\n",
+       "      <td>0.973586</td>\n",
+       "      <td>0.748452</td>\n",
+       "      <td>0.741271</td>\n",
+       "      <td>8.586818</td>\n",
+       "      <td>8.759359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>16</td>\n",
+       "      <td>10.84991</td>\n",
+       "      <td>0.092167</td>\n",
+       "      <td>2.51325</td>\n",
+       "      <td>1.141016</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.55317</td>\n",
+       "      <td>50</td>\n",
+       "      <td>536</td>\n",
+       "      <td>72</td>\n",
+       "      <td>...</td>\n",
+       "      <td>584.1523</td>\n",
+       "      <td>74.12625</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.952302</td>\n",
+       "      <td>0.985802</td>\n",
+       "      <td>0.969052</td>\n",
+       "      <td>0.675194</td>\n",
+       "      <td>0.668723</td>\n",
+       "      <td>8.586906</td>\n",
+       "      <td>8.759317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>17</td>\n",
+       "      <td>4.559271</td>\n",
+       "      <td>0.219333</td>\n",
+       "      <td>2.349</td>\n",
+       "      <td>1.066446</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.346653</td>\n",
+       "      <td>50</td>\n",
+       "      <td>568.233972</td>\n",
+       "      <td>138</td>\n",
+       "      <td>...</td>\n",
+       "      <td>545.6575</td>\n",
+       "      <td>74.14425</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.948116</td>\n",
+       "      <td>0.981680</td>\n",
+       "      <td>0.964898</td>\n",
+       "      <td>0.616149</td>\n",
+       "      <td>0.610241</td>\n",
+       "      <td>8.586865</td>\n",
+       "      <td>8.759409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>18</td>\n",
+       "      <td>4.231312</td>\n",
+       "      <td>0.236333</td>\n",
+       "      <td>1.971</td>\n",
+       "      <td>0.894834</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.228644</td>\n",
+       "      <td>167</td>\n",
+       "      <td>604.161364</td>\n",
+       "      <td>146</td>\n",
+       "      <td>...</td>\n",
+       "      <td>536.4112</td>\n",
+       "      <td>74.5335</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.944257</td>\n",
+       "      <td>0.977890</td>\n",
+       "      <td>0.961073</td>\n",
+       "      <td>0.604458</td>\n",
+       "      <td>0.598664</td>\n",
+       "      <td>8.58689</td>\n",
+       "      <td>8.759426</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   MD        ROP     ROP.1      WOB     WOB.1 BIT_RPM       TRQ  SPP  \\\n",
+       "0   m      min/m     m/min      klb       Kgr     rpm    klb.ft  Psi   \n",
+       "1  15  19.586777  0.051055    5.148  2.337192      50  0.206517   50   \n",
+       "2  16   10.84991  0.092167  2.51325  1.141016      50   0.55317   50   \n",
+       "3  17   4.559271  0.219333    2.349  1.066446      50  0.346653   50   \n",
+       "4  18   4.231312  0.236333    1.971  0.894834      50  0.228644  167   \n",
+       "\n",
+       "      Flow In  SPM  ...   Actpitv  HOOKLOAD CSIP P ovb For Soft formation  \\\n",
+       "0     gal/min  rev  ...       bbl       klb  psi                      NaN   \n",
+       "1         525   70  ...  454.6412      71.5    0                 0.956864   \n",
+       "2         536   72  ...  584.1523  74.12625    0                 0.952302   \n",
+       "3  568.233972  138  ...  545.6575  74.14425    0                 0.948116   \n",
+       "4  604.161364  146  ...  536.4112   74.5335    0                 0.944257   \n",
+       "\n",
+       "  P ovb For Hard formation     P ovb         d  D adjust PP Zamora Method  \\\n",
+       "0                      NaN       psi   No UNIT   No unit              PSI   \n",
+       "1                 0.990307  0.973586  0.748452  0.741271         8.586818   \n",
+       "2                 0.985802  0.969052  0.675194  0.668723         8.586906   \n",
+       "3                 0.981680  0.964898  0.616149  0.610241         8.586865   \n",
+       "4                 0.977890  0.961073  0.604458  0.598664          8.58689   \n",
+       "\n",
+       "  PP Eaton Method  \n",
+       "0             psi  \n",
+       "1        8.759359  \n",
+       "2        8.759317  \n",
+       "3        8.759409  \n",
+       "4        8.759426  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -113,68 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 243,
-     "status": "ok",
-     "timestamp": 1731524038628,
-     "user": {
-      "displayName": "Naeimeh Nour",
-      "userId": "06407853353421918609"
-     },
-     "user_tz": 0
-    },
-    "id": "EK1L4GIVyKzH",
-    "outputId": "c4cabd16-d9c6-45a1-dceb-7d3fef9fb561"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 4105 entries, 0 to 4104\n",
-      "Data columns (total 22 columns):\n",
-      " #   Column                    Non-Null Count  Dtype  \n",
-      "---  ------                    --------------  -----  \n",
-      " 0   MD                        4105 non-null   object \n",
-      " 1   ROP                       4105 non-null   object \n",
-      " 2   ROP.1                     4105 non-null   object \n",
-      " 3   WOB                       4105 non-null   object \n",
-      " 4   WOB.1                     4105 non-null   object \n",
-      " 5   BIT_RPM                   4105 non-null   object \n",
-      " 6   TRQ                       4105 non-null   object \n",
-      " 7   SPP                       4105 non-null   object \n",
-      " 8   Flow In                   4105 non-null   object \n",
-      " 9   SPM                       4105 non-null   object \n",
-      " 10  MWI                       4105 non-null   object \n",
-      " 11  MWO                       4105 non-null   object \n",
-      " 12  Actpitv                   4105 non-null   object \n",
-      " 13  HOOKLOAD                  4105 non-null   object \n",
-      " 14  CSIP                      4042 non-null   object \n",
-      " 15  P ovb For Soft formation  4104 non-null   float64\n",
-      " 16  P ovb For Hard formation  4104 non-null   float64\n",
-      " 17  P ovb                     4105 non-null   object \n",
-      " 18  d                         4105 non-null   object \n",
-      " 19  D adjust                  4105 non-null   object \n",
-      " 20  PP Zamora Method          4105 non-null   object \n",
-      " 21  PP Eaton Method           4105 non-null   object \n",
-      "dtypes: float64(2), object(20)\n",
-      "memory usage: 705.7+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -295,7 +385,7 @@
        "4         8.586905  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "executionInfo": {
      "elapsed": 336,
@@ -338,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -384,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -426,8 +516,55 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Without Standardization:\n",
+      "RMSE: 0.009990037212837786\n",
+      "R²: 0.9903090525132963\n",
+      "\n",
+      "With Standardization:\n",
+      "RMSE: 0.009990037212837966\n",
+      "R²: 0.9903090525132958\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error, root_mean_squared_error\n",
+    "\n",
+    "# Split the dataset\n",
+    "X = df.drop('PP Zamora Method', axis=1)\n",
+    "y = df['PP Zamora Method']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Train the model without standardization\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(\"Without Standardization:\")\n",
+    "print(\"RMSE:\", mean_squared_error(y_test, y_pred, squared=False))\n",
+    "print(\"R²:\", r2_score(y_test, y_pred))\n",
+    "\n",
+    "# Standardize the features\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# Train the model with standardized features\n",
+    "model_scaled = LinearRegression()\n",
+    "model_scaled.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "y_pred_scaled = model_scaled.predict(X_test_scaled)\n",
+    "print(\"\\nWith Standardization:\")\n",
+    "print(\"RMSE:\", mean_squared_error(y_test, y_pred_scaled, squared=False))\n",
+    "print(\"R²:\", r2_score(y_test, y_pred_scaled))\n"
+   ]
   },
   {
    "cell_type": "code",
