plotting the data

--- a/drilling.ipynb
+++ b/drilling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 73,
    "metadata": {
     "executionInfo": {
      "elapsed": 549,
@@ -18,23 +18,22 @@
    },
    "outputs": [],
    "source": [
-    "from re import L\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import scipy.stats as stats\n",
+    "\n",
+    "from re import L\n",
     "from sklearn.linear_model import LinearRegression, Ridge\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "from sklearn.preprocessing import StandardScaler, RobustScaler\n",
-    "from scipy.stats import mstats"
+    "from sklearn.preprocessing import RobustScaler\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -256,19 +255,20 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Load the dataset\n",
     "df = pd.read_excel('G:\\My Drive\\Drilling\\Drilling_Data.xls')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 75,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -389,12 +389,13 @@
        "4         8.586905  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Drop unnecessary features\n",
     "df = df.drop(\n",
     "    ['MD', 'WOB', 'TRQ', 'SPP', 'Flow In', 'SPM', 'Actpitv', 'HOOKLOAD', 'CSIP',\n",
     "     'P ovb For Soft formation', 'P ovb For Hard formation', 'P ovb', 'd',\n",
@@ -407,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 76,
    "metadata": {
     "executionInfo": {
      "elapsed": 336,
@@ -423,6 +424,7 @@
    },
    "outputs": [],
    "source": [
+    "# Convert to numeric features\n",
     "numeric_columns = ['ROP', 'ROP.1', 'WOB.1', 'BIT_RPM', 'MWI', 'MWO',\n",
     "                   'PP Zamora Method']\n",
     "\n",
@@ -432,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -457,13 +459,10 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "# Plot histograms for normalized data\n",
     "\n",
-    "# Assuming 'df_numeric' contains the numeric version of your dataset\n",
     "df_normalized = (df - df.min()) / (df.max() - df.min())  # Min-max normalization\n",
     "\n",
-    "# Plot histograms for normalized data\n",
     "df_normalized.hist(figsize=(15, 10), bins=30, layout=(5, 5))\n",
     "plt.suptitle(\"Normalized Feature Distribution\", fontsize=16)\n",
     "plt.show()\n",
@@ -476,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -491,6 +490,7 @@
     }
    ],
    "source": [
+    "# Box Plot\n",
     "plt.figure(figsize=(15, 8))\n",
     "sns.boxplot(data=df_normalized, orient='h', palette=\"coolwarm\")\n",
     "plt.title(\"Box Plot of Normalized Features\", fontsize=16)\n",
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -537,8 +537,7 @@
     "X = df.drop('PP Zamora Method', axis=1)\n",
     "y = df['PP Zamora Method']\n",
     "\n",
-    "### 1. Transformation to Reduce Skewness\n",
-    "# Apply log(1+x) transformation to reduce skewness\n",
+    "# Transformation to Reduce Skewness - Apply log(1+x) transformation to reduce skewness\n",
     "df_transformed = df.copy()\n",
     "for col in df_transformed.columns:\n",
     "    df_transformed[col] = np.log1p(df_transformed[col])\n",
@@ -548,12 +547,12 @@
     "# Train/test split on transformed data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_transformed, y, test_size=0.3, random_state=42)\n",
     "\n",
-    "### 2. Robust Scaling\n",
+    "# Robust Scaling\n",
     "scaler = RobustScaler()\n",
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "### 3. Baseline Linear Regression\n",
+    "# Baseline Linear Regression\n",
     "lr = LinearRegression()\n",
     "lr.fit(X_train_scaled, y_train)\n",
     "y_train_pred = lr.predict(X_train_scaled)\n",
@@ -565,7 +564,7 @@
     "print(\"Test MSE:\", mean_squared_error(y_test, y_test_pred))\n",
     "print(\"Test R2 Score:\", r2_score(y_test, y_test_pred))\n",
     "\n",
-    "### 4. Ridge Regression (To Handle Outliers and Reduce Overfitting)\n",
+    "# Ridge Regression (To Handle Outliers and Reduce Overfitting)\n",
     "ridge = Ridge(alpha=1.0)\n",
     "ridge.fit(X_train_scaled, y_train)\n",
     "y_train_pred_ridge = ridge.predict(X_train_scaled)\n",
@@ -577,7 +576,7 @@
     "print(\"Test MSE:\", mean_squared_error(y_test, y_test_pred_ridge))\n",
     "print(\"Test R2 Score:\", r2_score(y_test, y_test_pred_ridge))\n",
     "\n",
-    "### 5. Random Forest Regressor (Handling Nonlinear Relationships and Outliers)\n",
+    "# Random Forest Regressor (Handling Nonlinear Relationships and Outliers)\n",
     "rf = RandomForestRegressor(n_estimators=100, random_state=42)\n",
     "rf.fit(X_train_scaled, y_train)\n",
     "y_train_pred_rf = rf.predict(X_train_scaled)\n",
@@ -589,8 +588,7 @@
     "print(\"Test MSE:\", mean_squared_error(y_test, y_test_pred_rf))\n",
     "print(\"Test R2 Score:\", r2_score(y_test, y_test_pred_rf))\n",
     "\n",
-    "### 6. Check for Overfitting and Underfitting\n",
-    "# Calculate performance gaps between train and test sets\n",
+    "# Check for Overfitting and Underfitting - Calculate performance gaps between train and test sets\n",
     "lr_train_test_gap = r2_score(y_train, y_train_pred) - r2_score(y_test, y_test_pred)\n",
     "ridge_train_test_gap = r2_score(y_train, y_train_pred_ridge) - r2_score(y_test, y_test_pred_ridge)\n",
     "rf_train_test_gap = r2_score(y_train, y_train_pred_rf) - r2_score(y_test, y_test_pred_rf)\n",
@@ -603,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -617,8 +615,6 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import cross_val_score\n",
-    "\n",
     "# Cross-validation for Linear Regression\n",
     "cv_scores = cross_val_score(lr, X_train_scaled, y_train, cv=5, scoring='r2')\n",
     "print(\"\\nCross-Validation R² Scores for Linear Regression:\", cv_scores)\n",
@@ -627,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -643,8 +639,7 @@
     }
    ],
    "source": [
-    "# Example: New data input (ensure this matches the format of your training data)\n",
-    "# Replace the values in this dictionary with your actual input data\n",
+    "# Example: New data input \n",
     "new_data = {\n",
     "    'ROP': [19.58],\n",
     "    'ROP.1': [0.05],\n",
@@ -652,21 +647,20 @@
     "    'BIT_RPM': [50],\n",
     "    'MWI': [64.51],\n",
     "    'MWO': [65.14],\n",
-    "    # Add all other features present in the dataset\n",
     "}\n",
     "\n",
     "# Convert the dictionary to a DataFrame\n",
     "new_data_df = pd.DataFrame(new_data)\n",
     "\n",
-    "# Step 1: Apply Log Transformation\n",
+    "# Apply Log Transformation\n",
     "new_data_transformed = new_data_df.copy()\n",
     "for col in new_data_transformed.columns:\n",
     "    new_data_transformed[col] = np.log1p(new_data_transformed[col])\n",
     "\n",
-    "# Step 2: Apply Robust Scaling (using the scaler fitted during training)\n",
+    "# Apply Robust Scaling \n",
     "new_data_scaled = scaler.transform(new_data_transformed)\n",
     "\n",
-    "# Step 3: Make Predictions with Each Model\n",
+    "# Make Predictions with Each Model\n",
     "# Linear Regression Prediction\n",
     "linear_pred = lr.predict(new_data_scaled)\n",
     "\n",
@@ -682,90 +676,6 @@
     "print(f\"Ridge Regression Prediction: {ridge_pred[0]}\")\n",
     "print(f\"Random Forest Prediction: {rf_pred[0]}\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
